add some javascript, fixed webpack 2 instance

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,5 +7,6 @@ html(lang="en" dir="ltr")
         title Startcss
         link(rel="stylesheet", href="/css/startcss.css")
     body
-        
+        p.test sdsdsd
+        p.test sdsdsd
         script(src="/js/main.js")
