[added] typography styles, normalize style

--- a/scss/startcss.scss
+++ b/scss/startcss.scss
@@ -1,3 +1,8 @@
+
+@import "./variables";
+@import "./vendors/normalize";
+@import "./base/typography";
+
 @lost gutter 32px;
 @lost --beta-direction rtl;
 
