[added] placeholders, grid containers

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -16,6 +16,7 @@ body {
   background-color: $background-color;
   line-height: $font-line-height;
   -webkit-font-smoothing: antialiased;
+  font-family: 'Montserrat';
 }
 
 p,
