--- a/scss/startcss.scss
+++ b/scss/startcss.scss
@@ -1,22 +1,12 @@
 
 @import "./variables";
+@import "./placeholders";
 @import "./vendors/normalize";
 @import "./base/typography";
 
-@lost gutter 32px;
-@lost --beta-direction rtl;
+//@lost gutter 32px;
+//@lost --beta-direction rtl;
 
 
-body {
-    font-family: 'Montserrat'
-}
-
-// .grids {
-//     background-color: #ccc;
-//     lost-flex-container: row;
-// }
-
-// .grid {
-//     background-color: #f9f9f9;
-//     lost-waffle: 1/3 flex;
-// }
+//Components
+@import "./components/grid";
