add typography (typo.pug) view

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-html(lang="en" dir="ltr")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Startcss
-        link(rel="stylesheet", href="/css/startcss.css")
-    body
-        p.test sdsdsd
-        p.test sdsdsd
-        script(src="/js/main.js")
+extends layouts/main.pug
+block body
+    p this is body
